plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.sparta'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    runtimeOnly 'com.mysql:mysql-connector-j'
    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    // spring security, jwt
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springframework.security:spring-security-crypto'
    // 테스트용 DB
    runtimeOnly 'com.h2database:h2'
    // .env 읽기
    implementation("io.github.cdimascio:java-dotenv:5.2.2")
    // 이메일 인증
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // Quartz 스케줄러
    implementation 'org.springframework.boot:spring-boot-starter-quartz'

}

tasks.named('test') {
    useJUnitPlatform()
}
